CDE-3881-private-label-voucher: - TYPO INVOICE

--- a/src/app/pages/user-management/supplier-vouchers/detail/voucher-principal-detail.component.html
+++ b/src/app/pages/user-management/supplier-vouchers/detail/voucher-principal-detail.component.html
@@ -88,7 +88,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="No. Invouce" prop="invoice_number" [width]="155" [sortable]="true" *ngIf="activeCol.indexOf('invoice_number') !== -1">
+        <ngx-datatable-column name="No. Invoice" prop="invoice_number" [width]="155" [sortable]="true" *ngIf="activeCol.indexOf('invoice_number') !== -1">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span class="row-address" style="cursor: pointer;">{{row.invoice_number}}</span>
           </ng-template>
