--- a/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-mitra-edit/pay-later-panel-mitra-edit.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-mitra-edit/pay-later-panel-mitra-edit.component.html
@@ -151,7 +151,7 @@
       </div>
       <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="center center"
         *ngIf="loaded && !isDetail">
-        <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+        <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="popUpConfirm()">
           SIMPAN
         </button>
       </div>
