--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -27,7 +27,7 @@
                   </div>
                   <div *ngIf="detailProduct.cashier === 1" class="info-label" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="4px">
                     <mat-icon>check</mat-icon>
-                    <span>Produk tersedia di Pesan Antar</span>
+                    <span>Produk tersedia online</span>
                   </div>
                 </div>
                 <mat-form-field fxFlex="100" class="is-light form-primary">
