--- a/src/app/pages/dte/template/dialog/upload-image/upload-image.component.html
+++ b/src/app/pages/dte/template/dialog/upload-image/upload-image.component.html
@@ -18,10 +18,10 @@
   </mat-toolbar>
 
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
-    <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files" accept="image/*"
+    <div id="upload-image" ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files" accept="image/*"
       [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag" *ngIf="fileType == 'image'">
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
-        <mat-icon class="secondary-text s-48">add_photo_alternate_outline</mat-icon>
+        <mat-icon id="btnUploadImage" class="secondary-text s-48">add_photo_alternate_outline</mat-icon>
         <br>
         <span matPrefix>Tarik Gambar Kesini atau
           <strong>Pilih File</strong>
@@ -29,10 +29,10 @@
         <span matPrefix>Ukuran 410x210 piksel, Maksimum 2MB</span>
       </div>
     </div>
-    <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files" accept="video/mp4"
+    <div id="upload-video" ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files" accept="video/mp4"
       [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag" *ngIf="fileType == 'video'" (fileChange)="onSelectFile($event)">
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center" >
-        <mat-icon class="secondary-text s-48">add_photo_alternate_outline</mat-icon>
+        <mat-icon id="btnUploadVideo" class="secondary-text s-48">add_photo_alternate_outline</mat-icon>
         <br>
         <span matPrefix>Tarik Video Kesini atau
           <strong>Pilih File</strong>
@@ -66,8 +66,8 @@
     <div class="p-16">
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
         fxFlex="1 0 auto">
-        <button type="button" mat-raised-button color="primary" (click)="submit()" [disabled]="!files">Pilih</button>
-        <button type="button" mat-stroked-button color="primary" (click)="onSelectFile(files)">Batal</button> 
+        <button id="btnPilihUpload" type="button" mat-raised-button color="primary" (click)="submit()" [disabled]="!files">Pilih</button>
+        <button id="btnBatalUpload" type="button" mat-stroked-button color="primary" (click)="onSelectFile(files)">Batal</button> 
         <!-- dialogRef.close() -->
       </div>
     </div>
