--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -54,7 +54,7 @@
                 <div fxLayout="row" fxFlex="60" fxLayoutGap="20px">
                   <div fxFlex="20">
                     <mat-form-field class="is-light">
-                      <input matInput type="text" [mask]="ls.locale.global.input_mask" [thousandSeparator]="ls.locale.global.input_separator" placeholder="Nilai Penukaran Untuk 1 Koin" formControlName="currency">
+                      <input matInput type="text" [mask]="ls.locale.global.input_mask_b2b" [thousandSeparator]="ls.locale.global.input_separator" placeholder="Nilai Penukaran Untuk 1 Koin" formControlName="currency">
                       <mat-error>
                         Nilai Penukaran untuk 1 Koin harus diisi.
                       </mat-error>
