setting khmer for order GSR

--- a/src/app/pages/user-management/private-label/supplier-settings/index/supplier-settings-index.component.html
+++ b/src/app/pages/user-management/private-label/supplier-settings/index/supplier-settings-index.component.html
@@ -58,7 +58,7 @@
               </div>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Order GSR" prop="status" [sortable]="false">
+          <ngx-datatable-column name="{{ 'produk_prinsipal.text46' | translate }}" prop="status" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div *ngFor="let setting of row.settings">
                 <mat-checkbox [checked]="setting.value" [disabled]="true" class="mat-checkbox-payment active" *ngIf="setting.name == 'gsr_order' && setting.value"></mat-checkbox>
