--- a/src/app/pages/content-management/help/index/help-index.component.html
+++ b/src/app/pages/content-management/help/index/help-index.component.html
@@ -43,6 +43,7 @@
               </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column [width]="200" name="Grup Pengguna" prop="user"></ngx-datatable-column>
+            <ngx-datatable-column [width]="200" name="Negara" prop="country"></ngx-datatable-column>
             <!-- <ngx-datatable-column name="Halaman Tujuan" prop="slug"></ngx-datatable-column> -->
 
             <ngx-datatable-column [width]="100" name="Likes" prop="likes_count"></ngx-datatable-column>
@@ -82,6 +83,7 @@
               </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column [width]="200" name="Grup Pengguna" prop="user"></ngx-datatable-column>
+            <ngx-datatable-column [width]="200" name="Negara" prop="country"></ngx-datatable-column>
             <!-- <ngx-datatable-column name="Halaman Tujuan" prop="slug"></ngx-datatable-column> -->
 
             <ngx-datatable-column [width]="100" name="Likes" prop="likes_count"></ngx-datatable-column>
