--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -213,7 +213,7 @@
 
           <div fxLayout="row">
             <mat-form-field fxFlex="45" class="is-light form-primary">
-              <mat-select placeholder="Tipe Pengulangan" formControlName="type_of_recurrence" [(ngModel)]="typeOfRecurrence">
+              <mat-select placeholder="Tipe Pengulangan" (selectionChange)="checkOnetimeFrequency(typeOfRecurrence)" formControlName="type_of_recurrence" [(ngModel)]="typeOfRecurrence">
                 <mat-option *ngFor="let item of listTypeOfRecurrence" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
             </mat-form-field>
@@ -706,7 +706,7 @@
 
         </div>
 
-        <div class="pt-16" fxLayout="row">
+        <div *ngIf="!typeOfRecurrence == 'OneTime' || isActiveInactiveShow" class="pt-16" fxLayout="row">
           <mat-form-field fxFlex="45" class="is-light form-primary">
             <mat-select placeholder="Status" formControlName="status">
               <mat-option value="Active">Active</mat-option>
@@ -715,11 +715,12 @@
           </mat-form-field>
         </div>
 
-        <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
+        <div *ngIf="isHideSaveButton" class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
           <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
             SIMPAN
           </button>
         </div>
+        <span class="noEditOptions" *ngIf="!isHideSaveButton">Notifikasi satu kali tidak dapat diedit, karena telah dikirim langsung saat dibuat.</span>
       </form>
     </div>
   </div>
