--- a/src/app/pages/notification/create/notification-create.component.scss
+++ b/src/app/pages/notification/create/notification-create.component.scss
@@ -148,4 +148,10 @@
       height: 250px;
     }
   }
+
+  .noEditOptions {
+    font-weight: bold;
+    color:#e53935;
+    font-size: 16px;
+  }
 }
