--- a/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
@@ -39,6 +39,11 @@
         <mat-tab label="Verification Remark">
           <app-verification-remark></app-verification-remark>
         </mat-tab>
+
+        <!-- Copywriting -->
+        <mat-tab label="Copywriting">
+          <app-copywriting></app-copywriting>
+        </mat-tab>
       </mat-tab-group>
     </div>
   </div>
